# planet-commander

./: .env.example  .gitignore  AGENT-SELF-UPDATE.md  ARTIFACT-INDEXING-PLAN.md  AUDIT-SYSTEM-SPEC.md  AUTO-CONTEXT-ENRICHMENT-SPEC.md  CHANGELOG.md  CHAT-FILTERING-AND-PINNING-SPEC.md  CLAUDE.md  DASHBOARD-WIDGETS-EXAMPLE.md  DEFCON-QUICK-REFERENCE.md  DEFCON.md  DEPLOYMENT.md  DEVELOPMENT-WORKFLOW.md  ECC-INTEGRATION-GAP-ANALYSIS.md  EXPANDABLE-CARDS-PLAN.md  EXPANDABLE-CARDS-SPEC.md  GITLAB-MR-INTEGRATION-COMPLETE.md  GITLAB-MR-INTEGRATION-PLAN.md  GOOGLE-DRIVE-INTEGRATION-COMPLETE.md  GOOGLE-DRIVE-INTEGRATION-PLAN.md  GRAFANA-ALERTS-INTEGRATION-COMPLETE.md  GRAFANA-ALERTS-INTEGRATION-PLAN.md  JIRA-FILTER-UPDATE.md  JIRA-SUMMARY-IMPLEMENTATION.md  MODAL-FIXES.md  Makefile  ONBOARDING.md  PAGERDUTY-INTEGRATION-COMPLETE.md  PAGERDUTY-INTEGRATION-PLAN.md  PATTERN-INTEGRATION-GUIDE.md  PHASE-4-ADVANCED-FEATURES-PLAN.md  PIPELINE-STAGE-METRICS.md  PLANET-COMMANDER-SPEC.md  PROACTIVE-INCIDENT-RESPONSE-SPEC.md  PROGRESS.md  PROJECT-DOCS-INTEGRATION-COMPLETE.md  PROJECT-DOCS-INTEGRATION-PLAN.md  QUICK-REFERENCE.md  README.md  (+20 more)
backend/: Dockerfile  agent-permissions.txt  check_agent_path.py  check_agents.py  check_chat.py  check_contexts.py  check_enum.py  check_jira.py  check_skills.py  config.yaml  find_testable_chat.py  main.py  pyproject.toml  run-local.sh  test_skill_indexing.py  test_skill_suggestion.py  test_url_extract.py
backend/alembic/: env.py
backend/app/: cli.py  config.py  main.py  seed.py
backend/tests/: conftest.py  test_artifact_service.py  (+4 more)
docs/: PHASE2.md  (+13 more)
(+402 files in other folders)
